--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -166,9 +166,6 @@ input[type=submit]:hover {
   clear: both;
 }
 
-
-
-
 .footer{
     font-family: system-ui;
     background-color: #b3b3b3;
@@ -177,3 +174,33 @@ input[type=submit]:hover {
     color: black
 }
 
+.block{
+    max-width: 700px;
+    height: 400px;
+    border: 2px solid red;
+    margin: 0 auto;
+    font-weight: bold;
+   
+}
+
+.block div{
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+}
+
+.block1{
+    background-color: #7fa046;
+}
+
+.block2{
+    background-color: #737373;
+    position: absolute;
+    top: 20px;
+    left: 70px;
+    width: 30px;
+}
+
+.block3{
+    background-color: #b3b3b3;
+}
